# roman-wfi-reference-pipeline

./: pyproject.toml
.github/workflows/: ci_workflow.yml
dev_scripts/: rfp_mask_dev.py
src/wfi_reference_pipeline/pipelines/: dark_pipeline.py
src/wfi_reference_pipeline/reference_types/dark/: dark.py  superdark_file_batches.py
src/wfi_reference_pipeline/reference_types/mask/: mask.py
src/wfi_reference_pipeline/reference_types/tests/: test_dark.py  test_flat.py  test_linearity.py  test_readnoise.py  test_reference_type.py  test_rfp_schema.py
src/wfi_reference_pipeline/resources/: make_dev_meta.py  make_test_meta.py  wfi_meta_dark.py
