[project]
name = "wfi_reference_pipeline"
description = "Reference file pipeline for the Roman WFI instrument."
requires-python = ">=3.12"
authors = [
    { name = "STScI" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy>=7.0.0,<7.2.0",
    "crds>=12.0.0",
    "h5py",
    "matplotlib>=3.10.0,<3.11.0",
    "numpy>=2.1.0,<2.4.0",
    "pandas>=2.2.1,<2.4.0",
    "photutils>=2.2.0,<2.3.0",
    "psutil",
    "pysiaf>=0.24.0,<0.25.0",
    "PyYAML>=6.0.1,<6.1.0",
    "requests>=2.32.0,<2.33.0",
    "romancal>=0.17.0",
    "scipy>=1.15.0,<1.17.0",
    "soc_roman_tools>=0.1.0,<0.2.0",
    "stpsf>=2.0.0,<2.2.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "stsci_rtd_theme",
    "sphinx_automodapi",
]
test = [
    "pytest-cov",
    "pytest",
    "ruff",
    "pytest-mock"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
"Source Code" = "https://grit.stsci.edu/roman/wfi_reference_pipeline"

[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "doc",
    "examples",
]
where = [
    "src",
]
namespaces = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"wfi_reference_pipeline.config" = [
    "*.yaml",
    "*.yml",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/wfi_reference_pipeline/version.py"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = ["E501"]

[tool.coverage.run]
source = ["wfi_reference_pipeline"]
omit = [
    "**/__init__.py",
    "**/tests/*",
    "wfi_reference_pipeline/version.py",
]